# JAWS-MD

./: .gitignore  README.md  pyproject.toml
jaws_md/: scrapy.cfg
jaws_md/jaws_md/: items.py  middlewares.py  pipelines.py  settings.py
jaws_md/jaws_md/spiders/: quotes.py
